<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.estrada.darlin.areafiguras.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/mensaje"
            android:textSize="20dp"/>
    </LinearLayout>


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/rb_cuadrado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:hint="@string/cuadro"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/rb_triangulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:hint="@string/triangulo"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/rb_rectangulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:hint="@string/rectangulo"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/rb_circulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:hint="@string/circulo"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_lado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Lado"
            android:inputType="numberDecimal"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/ll_conten_triangulo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">
            <EditText
                android:id="@+id/et_base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Base"
                android:inputType="numberDecimal"/>
            <EditText
                android:id="@+id/et_altura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Altura"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_conten_rectangulo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">
            <EditText
                android:id="@+id/et_largo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Largo"
                android:inputType="numberDecimal"/>
            <EditText
                android:id="@+id/et_ancho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ancho"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <EditText
            android:id="@+id/et_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Radio"
            android:inputType="numberDecimal"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="center">
        <Button
            android:id="@+id/b_calcular"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_weight="0.1"
            android:hint="@string/calcular"
            android:textColorHint="@color/white"
            android:textSize="30dp"
            android:background="@color/blueviolet"
            android:onClick="buttonOnClick"/>
    </LinearLayout>
    <TextView
        android:id="@+id/b_resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:hint="@string/area"
        android:textSize="24dp"
        android:gravity="center">

    </TextView>
</LinearLayout>
